# RMHook

./: .gitignore  CMakeLists.txt  README.md
docs/: DocumentAccepted_MessageBroker_snippet.qml  ExportDialog_MessageBroker_snippet.qml  HTTP_SERVER.md
libs/: libzstd.1.dylib
scripts/: auto-install.sh  build.sh  http_server.py  inject.sh  test_http_server.py
src/core/tinyhook/: memory.c  objcrt.c  search.c  tinyhook.c
src/core/tinyhook/symsolve/: symexport.c  symtable.c
src/reMarkable/: DevHooks.h  DevHooks.m  reMarkable.h  reMarkable.m
src/utils/: Constant.h  Constant.m  HttpServer.h  HttpServer.mm  Logger.h  MemoryUtils.h  MemoryUtils.m  MessageBroker.h  MessageBroker.mm  ResourceUtils.h  ResourceUtils.m  mb.m  mb.qml
